cbits/Bullet.h

int btCollisionObject_getCollisionFlags(void *c); //method: getCollisionFlags int ( ::btCollisionObject::* )(  ) const
float btCollisionObject_getDeactivationTime(void *c); //method: getDeactivationTime ::btScalar ( ::btCollisionObject::* )(  ) const
void* btCollisionObject_getCollisionShape(void *c); //method: getCollisionShape ::btCollisionShape const * ( ::btCollisionObject::* )(  ) const
void* btCollisionObject_getCollisionShape0(void *c); //method: getCollisionShape ::btCollisionShape const * ( ::btCollisionObject::* )(  ) const
void* btCollisionObject_getCollisionShape1(void *c); //method: getCollisionShape ::btCollisionShape * ( ::btCollisionObject::* )(  ) 
void btCollisionObject_setAnisotropicFriction(void *c,float* p0); //method: setAnisotropicFriction void ( ::btCollisionObject::* )( ::btVector3 const & ) 
int btCollisionObject_checkCollideWithOverride(void *c,void* p0); //method: checkCollideWithOverride bool ( ::btCollisionObject::* )( ::btCollisionObject * ) 
void* btCollisionObject_getBroadphaseHandle(void *c); //method: getBroadphaseHandle ::btBroadphaseProxy * ( ::btCollisionObject::* )(  ) 
void* btCollisionObject_getBroadphaseHandle0(void *c); //method: getBroadphaseHandle ::btBroadphaseProxy * ( ::btCollisionObject::* )(  ) 
void* btCollisionObject_getBroadphaseHandle1(void *c); //method: getBroadphaseHandle ::btBroadphaseProxy const * ( ::btCollisionObject::* )(  ) const
void* btCollisionObject_getUserPointer(void *c); //method: getUserPointer void * ( ::btCollisionObject::* )(  ) const
void btCollisionObject_setCcdSweptSphereRadius(void *c,float p0); //method: setCcdSweptSphereRadius void ( ::btCollisionObject::* )( ::btScalar ) 
void btCollisionObject_getWorldTransform(void *c,float* ret); //method: getWorldTransform ::btTransform & ( ::btCollisionObject::* )(  ) 
void btCollisionObject_getWorldTransform0(void *c,float* ret); //method: getWorldTransform ::btTransform & ( ::btCollisionObject::* )(  ) 
void btCollisionObject_getWorldTransform1(void *c,float* ret); //method: getWorldTransform ::btTransform const & ( ::btCollisionObject::* )(  ) const
void btCollisionObject_setCollisionFlags(void *c,int p0); //method: setCollisionFlags void ( ::btCollisionObject::* )( int ) 
void btCollisionObject_internalSetTemporaryCollisionShape(void *c,void* p0); //method: internalSetTemporaryCollisionShape void ( ::btCollisionObject::* )( ::btCollisionShape * ) 
float btCollisionObject_getHitFraction(void *c); //method: getHitFraction ::btScalar ( ::btCollisionObject::* )(  ) const
int btCollisionObject_isActive(void *c); //method: isActive bool ( ::btCollisionObject::* )(  ) const
void btCollisionObject_setActivationState(void *c,int p0); //method: setActivationState void ( ::btCollisionObject::* )( int ) 
int btCollisionObject_getInternalType(void *c); //method: getInternalType int ( ::btCollisionObject::* )(  ) const
int btCollisionObject_getActivationState(void *c); //method: getActivationState int ( ::btCollisionObject::* )(  ) const
int btCollisionObject_hasContactResponse(void *c); //method: hasContactResponse bool ( ::btCollisionObject::* )(  ) const
void* btCollisionObject_getRootCollisionShape(void *c); //method: getRootCollisionShape ::btCollisionShape const * ( ::btCollisionObject::* )(  ) const
void* btCollisionObject_getRootCollisionShape0(void *c); //method: getRootCollisionShape ::btCollisionShape const * ( ::btCollisionObject::* )(  ) const